[package]
name = "thresholdwallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = { version = "0.29.0", features = ["rand-std"] }
web3 = "0.19.0"
tokio = "1.37.0"
serde = "1.0.203"
serde_json = "1.0.117"
anyhow = "1.0.86"
